初級編レスポンシブ

--- a/beginner/style.css
+++ b/beginner/style.css
@@ -19,7 +19,6 @@ ul {
 }
 
 header {
-  height: 64px;
   display: flex;
   padding-left: 128px;
 }
@@ -255,4 +254,112 @@ footer {
   align-items: center;
   justify-content: space-between;
   padding: 40px 0;
+}
+
+@media screen and (max-width: 900px) {
+  header {
+    display: flex;
+    padding-left: 64px;
+    flex-direction: row;
+  }
+
+  h1 {
+    margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
+  }
+
+  .title-list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .contact {
+    display: none;
+  }
+
+  #news {
+    padding: 4% 8%;
+  }
+
+  div.news-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  ul.news-ul li:nth-child(2) {
+    font-size: 12px;
+    background-color: #000;
+    color: #fff;
+    padding: 2px 4px;
+    margin-left: 8px;
+    margin-right: 50%;
+    margin-bottom: 8px;
+  }
+
+  ul.news-ul:nth-child(n + 2) {
+    border-left: none;
+    padding-left: 0;
+  }
+
+  #about {
+    display: block;
+  }
+
+  #about-img {
+    width: 100%;
+  }
+
+  .about-text {
+    padding: 8% 80px;
+    max-width: 100%;
+  }
+
+  #business {
+    width: auto;
+  }
+
+  .flex {
+    display: block;
+  }
+
+  .left-item1-img {
+    width: auto;
+  }
+  .left-item2-img {
+    width: auto;
+  }
+  .right-item1-img {
+    width: auto;
+  }
+  .right-item2-img {
+    width: auto;
+  }
+
+  #company {
+    display: block;
+    height: auto;
+  }
+
+  #company-text {
+    position: unset;
+  }
+  #company-img {
+    width: 100%;
+    position: unset;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer-flex {
+    flex-direction: column;
+  }
+
+  .footer-div {
+    text-align: center;
+  }
 }
