初級編コード修正

--- a/beginner/style.css
+++ b/beginner/style.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
 h1 {
   letter-spacing: 0.3em;
   font-weight: normal;
@@ -21,6 +26,7 @@ ul {
 header {
   display: flex;
   padding-left: 128px;
+  height: 80px;
 }
 
 .header-nav {
@@ -59,12 +65,10 @@ header {
   text-decoration: none;
 }
 
-#main-visual {
-  height: calc(100vh - 64px);
+#main-visual img {
   width: 100%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
+  height: calc(100vh - 80px);
+  object-fit: cover;
 }
 
 #news {
@@ -136,72 +140,47 @@ ul.news-ul li:nth-child(2) {
 }
 
 #business {
-  width: 100%;
-  max-width: 1032px;
-  padding: 0 16px;
-  margin: 0 auto;
   margin-bottom: 8%;
 }
 
-.flex {
+#business .flex {
   padding-left: 5%;
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
+  justify-content: space-between;
+  /* padding: 0 10%; */
 }
 
-.left {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+#business .flex .left {
+  width: 46%;
   padding-top: 5%;
 }
 
-.right {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+#business .flex .right {
+  width: 46%;
 }
 
-.left-item1-img {
-  height: 250px;
-  width: 70%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-  margin-bottom: 24px;
-}
-.left-item2-img {
-  height: 250px;
-  width: 70%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-.right-item1-img {
-  height: 250px;
-  width: 70%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-  margin-bottom: 24px;
-}
-.right-item2-img {
-  height: 250px;
-  width: 70%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
+#business .flex .item {
+  margin-bottom: 50px;
 }
 
-.item > p {
+#business .flex .item > p {
   font-weight: bold;
 }
+#business .flex .item > p:before {
+  content: "";
+  width: 8px;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: -18px;
+}
 
+/*
+テキストと画像はpositionを使って配置
+子要素の「position: absolute;」で高さがなくなるため、
+「height: 750px;」を指定して高さを確保
+*/
 #company {
   height: 750px;
   display: flex;
@@ -217,43 +196,65 @@ ul.news-ul li:nth-child(2) {
   position: absolute;
   top: 0;
   left: 0;
+  margin-bottom: 8%;
 }
 
-#company-img {
-  height: 400px;
-  width: 40%;
+#company .img {
+  width: 53%;
   position: absolute;
-  top: 150px;
-  right: 3%;
-  background-image: url(../img/bicycle1.jpg);
-  background-size: cover;
-  background-position: center;
+  top: 115px;
+  right: 0;
+}
+#company .img img {
+  width: 100%;
+  height: 400px;
   object-fit: cover;
 }
 
 dl {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
 }
-
 dt {
-  width: 20%;
+  width: 15%;
+  margin-top: 10px;
+}
+/*
+1つめのdtにはmargin-topを設定しない
+*/
+#company dt:first-of-type {
+  margin-top: 0;
+}
+#company dd {
+  width: 85%;
+  margin-top: 10px;
+}
+/*
+1つめのddにはmargin-topを設定しない
+*/
+#company dd:first-of-type {
+  margin-top: 0;
+}
+#company .add {
+  margin-left: 20%;
 }
 
-dd {
-  width: 80%;
-}
-
-footer {
+#footer {
   background-color: #fff;
   padding-bottom: 20px;
 }
-
-.footer-flex {
+#footer .flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 40px 0;
+}
+#footer .flex .logo {
+  margin-right: 0;
+}
+#footer .copyright {
+  font-size: 0.625rem;
 }
 
 @media screen and (max-width: 900px) {
@@ -319,47 +320,48 @@ footer {
     width: auto;
   }
 
-  .flex {
-    display: block;
-  }
-
-  .left-item1-img {
-    width: auto;
-  }
-  .left-item2-img {
-    width: auto;
-  }
-  .right-item1-img {
-    width: auto;
-  }
-  .right-item2-img {
-    width: auto;
-  }
-
-  #company {
-    display: block;
-    height: auto;
-  }
-
-  #company-text {
-    position: unset;
-  }
-  #company-img {
-    width: 100%;
-    position: unset;
-  }
-
-  footer {
+  #business .flex {
+    padding-left: 5%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .footer-flex {
+    /* padding: 0 10%; */
     flex-direction: column;
   }
 
-  .footer-div {
-    text-align: center;
+  #business .flex .left {
+    width: 100%;
+    padding-top: 5%;
+  }
+  #business .flex .right {
+    width: 100%;
+    padding-top: 5%;
+  }
+
+  /*
+  「position: static;」でrelativeを解除
+  */
+  #company {
+    height: auto;
+    flex-direction: column;
+    position: static;
+  }
+  #company-text {
+    width: 100%;
+    padding: 40px 20px;
+    margin-bottom: 20px;
+    position: static;
+  }
+
+  #company .img {
+    width: 100%;
+    padding: 0;
+    position: static;
+  }
+
+  #footer .flex {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #footer .flex .logo {
+    margin-bottom: 10px;
   }
 }
