--- a/中級編/main.css
+++ b/中級編/main.css
@@ -3,8 +3,9 @@ body {
   font-family: "Arial", sans-serif;
 }
 
-h2 {
-  text-align: center;
+a {
+  color: #333;
+  text-decoration: none;
 }
 
 p {
@@ -19,14 +20,27 @@ li {
   list-style: none;
 }
 
-h2::after {
+.wrapper {
+  width: 100%;
+  max-width: 860px;
+  margin: 0 auto;
+}
+
+.section-title {
+  font-size: 2.25rem;
+  margin-bottom: 100px;
+  text-align: center;
+  position: relative;
+}
+/* 疑似要素でタイトル下に下線を引く */
+.section-title::after {
   content: "";
   width: 100px;
   height: 3px;
   background-color: #333;
   display: block;
-  position: relative;
-  bottom: -25px;
+  position: absolute;
+  bottom: -20px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -76,6 +90,11 @@ header {
   transition: 0.3s;
 }
 
+.hamburger-menu.open {
+  color: white; /* ハンバーガーメニューを開いたときに背景色を赤に保つ */
+  z-index: 1000; /* ハンバーガーメニューをnav-menuの上に表示するためのz-index */
+}
+
 .hamburger-menu.open .bar:nth-child(1) {
   transform: translateY(25px) rotate(45deg);
 }
@@ -97,12 +116,6 @@ header {
   background-color: red;
   transition: right 0.3s;
   z-index: 999;
-}
-
-/* 新規追加 */
-.hamburger-menu.open {
-  color: white; /* ハンバーガーメニューを開いたときに背景色を赤に保つ */
-  z-index: 1000; /* ハンバーガーメニューをnav-menuの上に表示するためのz-index */
 }
 
 .nav-menu ul {
@@ -129,27 +142,52 @@ header {
 }
 
 #mainvisual .mainvisual-text {
-  margin-top: 10%;
+  /* margin-top: 10%;
   margin-left: 5%;
   position: absolute;
+  z-index: 10; */
+  position: absolute;
+  top: 280px;
+  left: 10%;
   z-index: 10;
 }
 
+/*
+「text-shadow」で文字の輪郭に白い影をつけることで、
+文字が背景画像に埋もれないようにする
+*/
 #mainvisual .mainvisual-text p {
   font-size: 2.875rem;
   font-weight: bold;
   margin-bottom: 30px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 4px 6px #fff;
 }
 
 #mainvisual .mainvisual-text a {
   width: 50%;
   padding: 16px 108px;
-  text-decoration: none;
   border-radius: 10px;
+  /* 文字の下に影をつけてボタンに立体感を出す */
+  border-bottom: 6px solid #9a0413;
   background-color: #ff2a2a;
   font-size: 16px;
   color: white;
+  position: relative;
+}
+/* ボタンの右矢印のマーク */
+#mainvisual .mainvisual-text a::after {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-top: solid 3px #fff;
+  border-right: solid 3px #fff;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 16px;
+  right: 30px;
+}
+#mainvisual .mainvisual-text a:hover {
+  background-color: #ee0000;
 }
 
 /* 画像のフェード */
@@ -256,7 +294,7 @@ img {
   padding-top: 5%;
   padding-bottom: 5%;
   background-color: #fff;
-  border-radius: 30px;
+  border-radius: 0 30px 30px 0;
   animation: slideInFromLeft 1s ease-out;
 }
 #reason .reason-left img {
@@ -272,7 +310,7 @@ img {
   padding-top: 5%;
   padding-bottom: 5%;
   background-color: #fff;
-  border-radius: 30px;
+  border-radius: 30px 0 0 30px;
   float: right;
   animation: slideInFromRight 1s ease-out;
 }
@@ -378,7 +416,6 @@ img {
   font-size: 1.75rem;
   font-weight: bold;
   border-radius: 30px;
-  text-decoration: none;
   letter-spacing: 0.2rem;
 }
 
@@ -475,7 +512,7 @@ footer a {
   #reason .reason-right {
     width: 95%;
     float: right;
-    margin-top: 20%;
+    margin-top: 15%;
   }
 
   #voice .chat {
