--- a/中級編/main.css
+++ b/中級編/main.css
@@ -110,12 +110,14 @@ header {
 .nav-menu {
   position: fixed;
   top: 0;
-  right: -100%;
+  left: 0;
   width: 100%;
   height: 100vh;
   background-color: red;
-  transition: right 0.3s;
-  z-index: 999;
+  z-index: 20;
+  opacity: 0;
+  transition: opacity 0.6s ease, visibility 0.6s ease;
+  visibility: hidden;
 }
 
 .nav-menu ul {
@@ -131,7 +133,8 @@ header {
 }
 
 .nav-menu.open {
-  right: 0;
+  opacity: 1;
+  visibility: visible;
 }
 
 #mainvisual {
@@ -142,10 +145,6 @@ header {
 }
 
 #mainvisual .mainvisual-text {
-  /* margin-top: 10%;
-  margin-left: 5%;
-  position: absolute;
-  z-index: 10; */
   position: absolute;
   top: 280px;
   left: 10%;
